fix icon sizing + finalize star link styling + fix inset on sidebar + finalize sidebar group styling + remove heading anchors on mobile

--- a/packages/guider/src/tailwind.css
+++ b/packages/guider/src/tailwind.css
@@ -78,3 +78,8 @@ body {
 .neato-guider-codeblock code:has(.focused):hover [data-line]:not(.focused) {
   opacity: 1 !important;
 }
+
+/* sidebar styling */
+.neato-guider-sidebar .neato-guider-sidebar-group:first-child {
+  margin-top: 0px !important; /* groups shouldnt have top margin if its the first item */
+}
